force-app/main/default/objects/Promotion_Item__c/Promotion_Item__c.object-meta.xml
<CustomObject>
    <label>Promotion Item</label>
    <nameField>
        <label>Promotion Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>