force-app/main/default/objects/Promotion_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(Valid_from__c &lt;= TODAY() &amp;&amp;  Valid_to__c &gt;= TODAY(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>