force-app/main/default/objects/Promotion_Item__c/fields/Concurently__c.field-meta.xml
<CustomField>
    <fullName>Concurently__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concurently</label>
    <type>Checkbox</type>
</CustomField>