force-app/main/default/objects/Promotion_Item__c/fields/FList_Price__c.field-meta.xml
<CustomField>
    <fullName>FList_Price__c</fullName>
    <inlineHelpText>this field use to fill-in the form(Hidden)</inlineHelpText>
    <label>FList Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>