force-app/main/default/objects/Promotion_Item__c/fields/FProduct_Code__c.field-meta.xml
<CustomField>
    <fullName>FProduct_Code__c</fullName>
    <description>This field used to capture the product code</description>
    <label>FProduct Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>