force-app/main/default/objects/Promotion_Item__c/fields/FSaveId__c.field-meta.xml
<CustomField>
    <fullName>FSaveId__c</fullName>
    <description>This field use to capture the PromotionI_Item__c Id (Hidden)</description>
    <label>FSaveId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>