force-app/main/default/objects/Promotion_Item__c/fields/FUnit_Price__c.field-meta.xml
<CustomField>
    <fullName>FUnit_Price__c</fullName>
    <description>This field used only for filling the form(Hidden)</description>
    <label>FUnit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>