force-app/main/default/objects/Promotion_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>List Price</label>
    <summarizedField>Promotion_Product__c.List_Price__c</summarizedField>
    <summaryForeignKey>Promotion_Product__c.Promotion_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>