force-app/main/default/objects/Promotion_Item__c/fields/Promotion_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Item_Code__c</fullName>
    <displayFormat>PII-{0000}</displayFormat>
    <label>Promotion Item Code</label>
    <type>AutoNumber</type>
</CustomField>