force-app/main/default/objects/Promotion_Item__c/fields/Public_Access__c.field-meta.xml
<CustomField>
    <fullName>Public_Access__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Public Access</label>
    <type>Checkbox</type>
</CustomField>