force-app/main/default/objects/Promotion_Item__c/fields/Service_Apply__c.field-meta.xml
<CustomField>
    <fullName>Service_Apply__c</fullName>
    <label>Service Apply</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Apply</valueSetName>
    </valueSet>
</CustomField>