force-app/main/default/objects/Promotion_Item__c/fields/Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Special_Price__c</fullName>
    <label>Special Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>