force-app/main/default/objects/Promotion_Item__c/fields/Unit_mearsure__c.field-meta.xml
<CustomField>
    <fullName>Unit_mearsure__c</fullName>
    <label>Unit mearsure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>