force-app/main/default/objects/Promotion_Item__c/recordTypes/Discount_Amount.recordType-meta.xml
<RecordType>
    <fullName>Discount_Amount</fullName>
    <active>true</active>
    <label>Discount Amount</label>
</RecordType>