force-app/main/default/objects/Promotion_Item__c/recordTypes/Promotion_Bike.recordType-meta.xml
<RecordType>
    <fullName>Promotion_Bike</fullName>
    <active>true</active>
    <label>Promotion Bike</label>
</RecordType>