force-app/main/default/objects/Promotion_Item__c/recordTypes/Promotion_Voucher.recordType-meta.xml
<RecordType>
    <fullName>Promotion_Voucher</fullName>
    <active>false</active>
    <label>Promotion Voucher</label>
</RecordType>