force-app/main/default/objects/Promotion_Item__c/recordTypes/Special_Price.recordType-meta.xml
<RecordType>
    <fullName>Special_Price</fullName>
    <active>true</active>
    <label>Special Price</label>
</RecordType>